fix: style spacing and sizing

--- a/src/components/Comments/CommentHeader/CommentHeader.module.scss
+++ b/src/components/Comments/CommentHeader/CommentHeader.module.scss
@@ -33,3 +33,8 @@
         padding: 0.3rem 1rem;
     }
 }
+
+.timeWrapper {
+    display: flex;
+    gap: 0.4rem;
+}
